[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/Boss/Rat/Asimole 1A[anim].png" type="Texture" id=1]
[ext_resource path="res://scripts/GiantRat.gd" type="Script" id=2]
[ext_resource path="res://sound/fx/Sound/RatSound/RatWalk.mp3" type="AudioStream" id=3]
[ext_resource path="res://fonts/CONSOLA.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://sound/fx/Sound/RatSound/RatAtk.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 116.5, 23.2266 )

[sub_resource type="Animation" id=45]
resource_name = "Atk"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BossMain:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "dmg_atk"
}, {
"args": [  ],
"method": "wait_atk_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("FX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=43]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BossMain:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=44]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BossMain:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=46]
resource_name = "Run"
length = 0.73
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BossMain:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("FX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="DynamicFont" id=41]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.372549, 0.811765, 0.423529, 1 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.568627, 0.258824, 0.227451, 1 )

[sub_resource type="DynamicFont" id=42]
size = 15
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 99.5, 64 )

[node name="Giant_Rat" type="KinematicBody2D"]
position = Vector2( 0, -17 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.500015, -0.773804 )
shape = SubResource( 1 )

[node name="BossMain" type="Sprite" parent="."]
position = Vector2( -22.9997, -108.25 )
scale = Vector2( 1.82292, 1.93437 )
texture = ExtResource( 1 )
flip_h = true
hframes = 4
vframes = 14
frame = 1
region_rect = Rect2( 7, 13, 765.702, 155.173 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Atk = SubResource( 45 )
anims/Idle = SubResource( 43 )
anims/RESET = SubResource( 44 )
anims/Run = SubResource( 46 )

[node name="HP" type="ProgressBar" parent="."]
margin_left = -52.9997
margin_top = 32.9996
margin_right = 42.0003
margin_bottom = 49.9996
custom_fonts/font = SubResource( 41 )
custom_styles/fg = SubResource( 31 )
custom_styles/bg = SubResource( 30 )
max_value = 160.0
value = 160.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BossName" type="RichTextLabel" parent="."]
margin_left = -93.9997
margin_top = 59.9996
margin_right = 44.0003
margin_bottom = 76.9996
rect_scale = Vector2( 1.24572, 1.24572 )
custom_fonts/normal_font = SubResource( 42 )
bbcode_enabled = true
bbcode_text = "[center]Giant Rat"
text = "Giant Rat"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AtkArea" type="Area2D" parent="."]
position = Vector2( -8.99998, 0.999603 )
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="AtkAreaShape" type="CollisionShape2D" parent="AtkArea"]
position = Vector2( -90.5, -0.999603 )
shape = SubResource( 47 )

[node name="FX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -1 )
stream = ExtResource( 3 )

[connection signal="body_entered" from="AtkArea" to="." method="_on_AtkArea_body_entered"]
[connection signal="body_exited" from="AtkArea" to="." method="_on_AtkArea_body_exited"]
